ニコニ貢献に対応

--- a/popup_files/css/popup.css
+++ b/popup_files/css/popup.css
@@ -61,7 +61,8 @@ nav.nav_menu ul li button:hover::after{
 /* iframe */
 main #iframe{
   width: 100%;
-  height: 400px;
+  height: 450px;
+  border: .5px solid #ddd;
 }
 
 /* footer */
